# cmake_issue25912_demo

./: CMakeLists.txt  consumer.cpp  schema.txt  schema_compiler.cpp
